@@ -14,17 +14,17 @@ repositories {
 }
 
 dependencies {
-    api 'com.esotericsoftware:kryo:5.6.2'
-    api('net.openhft:chronicle-queue:2026.1') {
-        exclude group: 'org.xerial.snappy', module: 'snappy-java'
-    }
     api('net.openhft:chronicle-map:2026.1') {
         exclude group: 'com.thoughtworks.xstream', module: 'xstream'
     }
     api 'com.jsoniter:jsoniter:0.9.23'
-    api 'org.mapdb:mapdb:3.1.0'
     api "org.tinylog:tinylog-impl:$tinyLogVersion"
     api "org.tinylog:tinylog-api:$tinyLogVersion"
+    implementation 'org.apache.fory:fory-core:0.15.0'
+    implementation('net.openhft:chronicle-queue:2026.1') {
+        exclude group: 'org.xerial.snappy', module: 'snappy-java'
+    }
+    implementation 'org.mapdb:mapdb:3.1.0'
     runtimeOnly "org.tinylog:slf4j-tinylog:$tinyLogVersion"
     testImplementation 'org.apache.logging.log4j:log4j-1.2-api:2.23.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.2'
@@ -44,7 +44,8 @@ application {
                 "--add-opens=java.base/java.io=ALL-UNNAMED",
                 "--add-opens=java.base/java.util=ALL-UNNAMED",
                 "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED",
-                "--enable-native-access=ALL-UNNAMED"
+                "--enable-native-access=ALL-UNNAMED",
+                "--sun-misc-unsafe-memory-access=allow"
                 ]
 }
 
